--- a/OkkaKalipWeb.UI/Views/Product/EditProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Product/EditProduct.cshtml
@@ -49,7 +49,14 @@
                 <!-- /.card-body -->
 
                 <div class="card-footer">
-                    <button type="submit" class="btn btn-primary">Kaydet</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-save"></i>
+                        Kaydet
+                    </button>
+                    <a class="btn btn-outline-info ml-6" href='javascript:history.go(-1)'>
+                        <i class="fas fa-chevron-left"></i>
+                        Listeye Dön
+                    </a>
                 </div>
 
             </div>
