--- a/OkkaKalipWeb.UI/Views/Slider/CreateSlider.cshtml
+++ b/OkkaKalipWeb.UI/Views/Slider/CreateSlider.cshtml
@@ -46,7 +46,14 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <button type="submit" class="btn btn-primary">Kaydet</button>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-save"></i>
+                                Kaydet
+                            </button>
+                            <a class="btn btn-outline-info ml-6" href='javascript:history.go(-1)'>
+                                <i class="fas fa-chevron-left"></i>
+                                Listeye Dön
+                            </a>
                         </div>
                     </form>
             </div>
