--- a/OkkaKalipWeb.UI/Views/Slider/EditSlider.cshtml
+++ b/OkkaKalipWeb.UI/Views/Slider/EditSlider.cshtml
@@ -27,30 +27,37 @@
 
 
                 <!-- form start -->
-            <form asp-controller="Slider" asp-action="EditSlider" method="post" enctype="multipart/form-data">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <input type="hidden" asp-for="Id" value="@Model.Id" />
-                <div class="card-body">
-                    <div class="form-group row">
-                        <label asp-for="ImageUrl">Image</label>
-                        <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
-                        <img src="~/img/slider/@Model.ImageUrl" width="100" />
-                        <input type="file" name="file" value="" />
+                <form asp-controller="Slider" asp-action="EditSlider" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" value="@Model.Id" />
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label asp-for="ImageUrl">Image</label>
+                            <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
+                            <img src="~/img/slider/@Model.ImageUrl" width="100" />
+                            <input type="file" name="file" value="" />
+                        </div>
+                        <div class="form-group row">
+                            <label asp-for="Title">Slider Başlığı</label>
+                            <input asp-for="Title" value="@Model.Title" class="form-control" placeholder="Slider Başlığını Giriniz...">
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>
+                        <div class="form-group row">
+                            <label asp-for="Description">Açıklama</label>
+                            <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control" rows="3" placeholder="Slider Açıklaması ..."></textarea>
+                        </div>
                     </div>
-                    <div class="form-group row">
-                        <label asp-for="Title">Slider Başlığı</label>
-                        <input asp-for="Title" value="@Model.Title" class="form-control" placeholder="Slider Başlığını Giriniz...">
-                        <span asp-validation-for="Title" class="text-danger"></span>
+                    <div class="card-body">
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-save"></i>
+                            Kaydet
+                        </button>
+                        <a class="btn btn-outline-info ml-6" href='javascript:history.go(-1)'>
+                            <i class="fas fa-chevron-left"></i>
+                            Listeye Dön
+                        </a>
                     </div>
-                    <div class="form-group row">
-                        <label asp-for="Description">Açıklama</label>
-                        <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control" rows="3" placeholder="Slider Açıklaması ..."></textarea>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <button type="submit" class="btn btn-primary">Kaydet</button>
-                </div>
-            </form>
+                </form>
             </div>
             <!-- /.card -->
         </div>
