--- a/OkkaKalipWeb.UI/Views/Shared/Components/_viewMap.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_viewMap.cshtml
@@ -1,14 +1,11 @@
-﻿<section>
+﻿@model string
+<section>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h3>View map:</h3>
                 <div class="map">
-                    <img src="https://via.placeholder.com/1170x500?text=google+map" alt="">
-                </div>
-                <div class="text-center">
-                    <a href="#" class="btn btn-primary btn-m-r">Get derection</a>
-                    <a href="#" class="btn btn-border">Google Map</a>
+                    @Html.Raw(Model)
                 </div>
             </div>
         </div>
