--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_footer.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_footer.cshtml
@@ -1,4 +1,5 @@
-﻿<footer id="site-footer" class="site-footer bg-footer">
+﻿@model BaseModel
+<footer id="site-footer" class="site-footer bg-footer">
     <div class="main-footer">
         <div class="container-custom">
             <div class="row">
@@ -6,11 +7,11 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="widget-footer">
                         <div id="media_image-1" class="widget widget_media_image">
-                            <a href="index.html"><img src="~/img/logo-footer.png" alt=""></a>
+                            <a href="index.html"><img src="~/img/info/@Model.InfoModel.LogoFooter" alt=""></a>
                         </div>
                         <div id="custom_html-1" class="widget_text widget widget_custom_html">
                             <div class="textwidget custom-html-widget">
-                                <p>Privacy | Integrity ©2019 Industris Company. <br>All Rights Res</p>
+                                <p>Gizlilik | Copyright ©2020 <b>Ahmet Tınastepe.</b> <br>Tüm Hakları Saklıdır</p>
                             </div>
                         </div>
                     </div>
@@ -73,11 +74,10 @@
 
                         <div class="footer-social ot-socials bg-white">
                             follow us:
-                            <a target="_blank" href="#" rel="noopener noreferrer"><i class="icon ion-logo-facebook"></i></a>
-                            <a target="_blank" href="#" rel="noopener noreferrer"><i class="icon ion-logo-instagram"></i></a>
-                            <a target="_blank" href="#" rel="noopener noreferrer"><i class="icon ion-logo-skype"></i></a>
-                            <a target="_blank" href="#" rel="noopener noreferrer"><i class="icon ion-logo-twitter"></i></a>
-                            <a target="_blank" href="#" rel="noopener noreferrer"><i class="icon ion-logo-youtube"></i></a>
+                            <a target="_blank" href="@(Model.InfoModel.FacebookUrl)" rel="noopener noreferrer"><i class="icon ion-logo-facebook"></i></a>
+                            <a target="_blank" href="@(Model.InfoModel.InstagramUrl)" rel="noopener noreferrer"><i class="icon ion-logo-instagram"></i></a>
+                            <a target="_blank" href="@(Model.InfoModel.TwitterUrl)" rel="noopener noreferrer"><i class="icon ion-logo-twitter"></i></a>
+                            <a target="_blank" href="@(Model.InfoModel.YoutubeUrl)" rel="noopener noreferrer"><i class="icon ion-logo-youtube"></i></a>
                         </div>
                     </div>
                 </div>
@@ -92,9 +92,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="topbar-left">
-                        <li><i class="icon ion-md-pin"></i>Forusbeen 50, 4035 Stavanger, Norway</li>
-                        <li><i class="icon ion-md-call"></i>+84 0378 260 852</li>
-                        <li><i class="icon ion-md-mail"></i>info.industris@gmail.com</li>
+                        <li><i class="icon ion-md-pin"></i>@Model.InfoModel.Address</li>
+                        <li><i class="icon ion-md-call"></i>@Model.InfoModel.Tel1</li>
+                        <li><i class="icon ion-md-mail"></i>@Model.InfoModel.Email1</li>
                     </ul>
                     <a id="back-to-top" href="#" class="btn btn-back-to-top pull-right">Back to top<i class="icon ion-ios-arrow-dropup-circle"></i></a>
                 </div>
