--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
@@ -1,13 +1,14 @@
-﻿<header id="site-header" class="site-header mobile-header-blue header-style-1">
+﻿@model BaseModel
+<header id="site-header" class="site-header mobile-header-blue header-style-1">
     <div id="header_topbar" class="header-topbar md-hidden sm-hidden clearfix">
         <div class="container-custom">
             <div class="row">
                 <div class="col-md-8">
                     <!-- Info on Topbar -->
                     <ul class="topbar-left">
-                        <li><i class="icon ion-md-pin"></i>Forusbeen 50, 4035 Stavanger, Norway</li>
-                        <li><i class="icon ion-md-call"></i>+84 0378 260 852</li>
-                        <li><i class="icon ion-md-mail"></i>info.industris@gmail.com</li>
+                        <li><i class="icon ion-md-pin"></i>@Model.InfoModel.Address</li>
+                        <li><i class="icon ion-md-call"></i>@Model.InfoModel.Tel1</li>
+                        <li><i class="icon ion-md-mail"></i>@Model.InfoModel.Email1</li>
                     </ul>
                 </div>
                 <!-- Info on topbar close -->
@@ -25,7 +26,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="logo-brand">
-                        <a href="/"><img src="~/img/logo.png" alt="industris"></a>
+                        <a href="/"><img src="~/img/info/@Model.InfoModel.LogoHeader" alt="industris"></a>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -130,7 +131,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <div class="logo-brand-mobile">
-                        <a href="/"><img src="~/img/logo.png" alt="Okka Kalıp"></a>
+                        <a href="/"><img src="~/img/info/@Model.InfoModel.LogoHeader" alt="Okka Kalıp"></a>
                     </div>
                 </div>
                 <div class="col-xs-6">
