Info Controller and GeneralFunctions

--- a/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
@@ -35,6 +35,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a asp-controller="Info" asp-action="EditInfo"
+                           asp-active-controllers="Info" asp-active-actions="EditInfo" asp-active-class="active" class="nav-link">
+                            <i class="nav-icon fas fa-info-circle"></i>
+                            <p>Firma Bilgileri</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a asp-controller="Product" asp-action="ProductList"
                            asp-active-controllers="Product" asp-active-actions="ProductList,CreateProduct,EditProduct" asp-active-class="active"
                            class="nav-link">
