--- a/OkkaKalipWeb.UI/Views/Account/Login.cshtml
+++ b/OkkaKalipWeb.UI/Views/Account/Login.cshtml
@@ -53,9 +53,10 @@
                         </div>
                         <div class="col-md-12">
                             <button type="submit" class="btn btn-block btn-primary">Giriş Yap</button>
+                            <a asp-controller="Account" asp-action="ForgotPassword" class="btn btn-border">Şifremi Unuttum</a>
                             <br>
                             <div class="industris-space-30"></div>
-                            Hesabın Yok mu? 
+                            Hesabın Yok mu?
                             <a class="lost-password" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
                         </div>
                     </div>
