--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
@@ -35,49 +35,49 @@
                             <li class="menu-item @(ViewBag.SelectedMenu=="Home"?"current-menu-ancestor current-menu-parent":"")">
                                 <a href="/">Anasayfa</a>
                                 <!--
-                                    <ul class="sub-menu">
-                                <li class="menu-item current-menu-item page_item current_page_item"><a href="index.html">Home 1</a></li>
-                                <li class="menu-item"><a href="index-2.html">Home 2</a></li>
-                                <li class="menu-item"><a href="index-3.html">Home 3</a></li>
-                                <li class="menu-item"><a href="index-4.html">Home 4</a></li>
-                                    </ul>
-                                -->
+                <ul class="sub-menu">
+            <li class="menu-item current-menu-item page_item current_page_item"><a href="index.html">Home 1</a></li>
+            <li class="menu-item"><a href="index-2.html">Home 2</a></li>
+            <li class="menu-item"><a href="index-3.html">Home 3</a></li>
+            <li class="menu-item"><a href="index-4.html">Home 4</a></li>
+                </ul>
+            -->
                             </li>
                             <li asp-active-controllers="About" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
                                 <a asp-controller="About" asp-action="Index">Kurumsal</a>
                                 <!--
-                                 <ul class="sub-menu">
-                                     <li class="menu-item"><a href="about-us.html">About Us</a></li>
-                                     <li class="menu-item menu-item-has-children">
-                                         <a href="events.html">Events</a>
-                                         <ul class="">
-                                             <li class="menu-item"><a href="events.html">Event</a></li>
-                                             <li class="menu-item"><a href="events-detail.html">Event Detail</a></li>
-                                         </ul>
-                                     </li>
-                                     <li class="menu-item menu-item-has-children">
-                                         <a href="shop.html">Shop</a>
-                                         <ul class="sub-menu">
-                                             <li class="menu-item"><a href="shop.html">Shop</a></li>
-                                             <li class="menu-item"><a href="shop-detail.html">Shop Detail</a></li>
-                                             <li class="menu-item"><a href="cart.html">Cart</a></li>
-                                             <li class="menu-item"><a href="checkout.html">Checkout</a></li>
-                                         </ul>
-                                     </li>
-                                     <li class="menu-item"><a href="faq.html">FAQ's</a></li>
-                                     <li class="menu-item"><a href="gallery.html">Gallery</a></li>
-                                     <li class="menu-item"><a href="404-page.html">404 Pages</a></li>
-                                     <li class="menu-item"><a href="comming-soon.html">Comming Soon</a></li>
-                                     <li class="menu-item"><a href="login.html">Login</a></li>
-                                     <li class="menu-item"><a href="typography.html">Typography</a></li>
-                                     <li class="menu-item"><a href="carrer.html">Career Page</a></li>
-                                     <li class="menu-item"><a href="corporate-governance.html">Corporate Governance</a></li>
-                                     <li class="menu-item"><a href="history.html">History</a></li>
-                                     <li class="menu-item"><a href="our-team.html">Our Team</a></li>
-                                     <li class="menu-item"><a href="partner-clients.html">Partner Clients</a></li>
-                                     <li class="menu-item"><a href="contact-us.html">Contact Us</a></li>
-                                 </ul>
-                                -->
+             <ul class="sub-menu">
+                 <li class="menu-item"><a href="about-us.html">About Us</a></li>
+                 <li class="menu-item menu-item-has-children">
+                     <a href="events.html">Events</a>
+                     <ul class="">
+                         <li class="menu-item"><a href="events.html">Event</a></li>
+                         <li class="menu-item"><a href="events-detail.html">Event Detail</a></li>
+                     </ul>
+                 </li>
+                 <li class="menu-item menu-item-has-children">
+                     <a href="shop.html">Shop</a>
+                     <ul class="sub-menu">
+                         <li class="menu-item"><a href="shop.html">Shop</a></li>
+                         <li class="menu-item"><a href="shop-detail.html">Shop Detail</a></li>
+                         <li class="menu-item"><a href="cart.html">Cart</a></li>
+                         <li class="menu-item"><a href="checkout.html">Checkout</a></li>
+                     </ul>
+                 </li>
+                 <li class="menu-item"><a href="faq.html">FAQ's</a></li>
+                 <li class="menu-item"><a href="gallery.html">Gallery</a></li>
+                 <li class="menu-item"><a href="404-page.html">404 Pages</a></li>
+                 <li class="menu-item"><a href="comming-soon.html">Comming Soon</a></li>
+                 <li class="menu-item"><a href="login.html">Login</a></li>
+                 <li class="menu-item"><a href="typography.html">Typography</a></li>
+                 <li class="menu-item"><a href="carrer.html">Career Page</a></li>
+                 <li class="menu-item"><a href="corporate-governance.html">Corporate Governance</a></li>
+                 <li class="menu-item"><a href="history.html">History</a></li>
+                 <li class="menu-item"><a href="our-team.html">Our Team</a></li>
+                 <li class="menu-item"><a href="partner-clients.html">Partner Clients</a></li>
+                 <li class="menu-item"><a href="contact-us.html">Contact Us</a></li>
+             </ul>
+            -->
                             </li>
                             <li asp-active-controllers="Shop" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
                                 <a asp-controller="Shop" asp-action="Index">Ürünler</a>
@@ -88,37 +88,35 @@
                             <li asp-active-controllers="Contact" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
                                 <a asp-controller="Contact" asp-action="Index">İletişim</a>
                                 <!--
-                                <ul class="sub-menu">
-                                    <li class="menu-item current-menu-item page_item current_page_item"><a href="news.html">News 1</a></li>
-                                    <li class="menu-item"><a href="news-2.html">News 2</a></li>
-                                    <li class="menu-item"><a href="post.html">News Detail</a></li>
-                                </ul>
-                                -->
+            <ul class="sub-menu">
+                <li class="menu-item current-menu-item page_item current_page_item"><a href="news.html">News 1</a></li>
+                <li class="menu-item"><a href="news-2.html">News 2</a></li>
+                <li class="menu-item"><a href="post.html">News Detail</a></li>
+            </ul>
+            -->
                             </li>
 
-                            <li class="menu-item">
+                            <li asp-active-controllers="Account" asp-active-actions="Manage" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item menu-item-has-children">
 
                                 @if (User.Identity.IsAuthenticated)
                                 {
-                                    <a asp-controller="Account" asp-action="Manage" class="btn btn-outline-primary">@User.Identity.Name</a>
+                                    <a asp-controller="Account" asp-action="Manage">@User.Identity.Name</a>
 
                                     <ul class="sub-menu">
-                                        @if (User.IsInRole("admin"))
-                                        {
-                                            <li class="menu-item"><a target="_blank" asp-controller="Admin" asp-action="Index">Yönetim Paneli</a></li>
-                                        }
-
                                         <li class="menu-item"><a asp-controller="Cart" asp-action="Index">Sepet</a></li>
                                         <li class="menu-item"><a asp-controller="Account" asp-action="Logout">Çıkış Yap</a></li>
                                     </ul>
                                 }
-                                else
-                                {
-                                    <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">Giriş Yap</a>
-                                }
-
                             </li>
                         </ul>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">Giriş Yap</a>
+                        }
+                        @if (User.IsInRole("admin"))
+                        {
+                            <a asp-controller="Admin" asp-action="Index" target="_blank" class="btn btn-outline-primary">Yönetim Paneli</a>
+                        }
                     </div>
                 </div>
             </div>
