--- a/OkkaKalipWeb.UI/Views/Shared/Components/_pagination.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_pagination.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductListModel
+﻿@model BaseListModel
 <div page-model="@Model.PageInfo" class="col-md-12">
     <ul class="page-pagination shop-pagination none-style">
         <li><span aria-current="page" class="page-numbers current">1</span></li>
