--- a/OkkaKalipWeb.UI/Views/Shop/Details.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shop/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductDetailsModel
 @{
-    ViewData["Title"] = "Okka Kalıp - Shop";
+    ViewData["Title"] = Model.Product.Name;
 }
 
 <div class="page-header" style="background: url('https://via.placeholder.com/1920x450.png') no-repeat center center;">
