--- a/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
+++ b/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using OkkaKalipWeb.UI.Extensions
 @using OkkaKalipWeb.UI.Models
 @using OkkaKalipWeb.UI.Models.Interfaces
+@using OkkaKalipWeb.UI.Models.Base
 @using OkkaKalipWeb.UI.Enums
 @using OkkaKalipWeb.UI.Services
 @using OkkaKalipWeb.UI.Functions
