--- a/OkkaKalipWeb.UI/Views/News/Index.cshtml
+++ b/OkkaKalipWeb.UI/Views/News/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewsModel
+﻿@model NewsListModel
 @{
     ViewData["Title"] = "Okka Kalıp - Haberler";
     Layout = "~/Views/Shared/_Layout.cshtml";
