--- a/OkkaKalipWeb.UI/Views/Product/EditProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Product/EditProduct.cshtml
@@ -34,7 +34,7 @@
                     <div class="form-group row">
                         <label asp-for="ImageUrl">Image</label>
                         <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
-                        <img src="~/img/@Model.ImageUrl" width="100" />
+                        <img src="~/img/product/@Model.ImageUrl" width="100" />
                         <input type="file" name="file" value="" />
                     </div>
                     <div class="form-group row">
