--- a/OkkaKalipWeb.UI/Views/Shared/Components/_productDetail.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_productDetail.cshtml
@@ -5,10 +5,10 @@
             <div class="col-md-6">
                 <div class="slider-product">
                     <div class="item">
-                        <img src="~/img/@Model.Product.ImageUrl" alt="product image">
+                        <img src="~/img/product/@Model.Product.ImageUrl" alt="product image">
                     </div>
                     <div class="item">
-                        <img src="~/img/@Model.Product.ImageUrl" alt="product image">
+                        <img src="~/img/product/@Model.Product.ImageUrl" alt="product image">
                     </div>
                     <div class="item">
                         <img src="https://via.placeholder.com/750x750.png" alt="product image">
@@ -22,10 +22,10 @@
                 </div>
                 <div class="slider-product-nav">
                     <div class="item">
-                        <img src="~/img/@Model.Product.ImageUrl" alt="product image" draggable="false">
+                        <img src="~/img/product/@Model.Product.ImageUrl" alt="product image" draggable="false">
                     </div>
                     <div class="item">
-                        <img src="~/img/@Model.Product.ImageUrl" alt="product image" draggable="false">
+                        <img src="~/img/product/@Model.Product.ImageUrl" alt="product image" draggable="false">
                     </div>
                     <div class="item">
                         <img src="https://via.placeholder.com/88x88.png" alt="product image" draggable="false">
