--- a/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
@@ -2,7 +2,7 @@
 <div class="col-md-6">
     <div class="product-box">
         <div class="product-head">
-            <img src="~/img/@Model.ImageUrl" alt="@Model.Name">
+            <img src="~/img/product/@Model.ImageUrl" alt="@Model.Name">
             <div class="product-btn">
                 @if (User.Identity.IsAuthenticated)
                 {
