--- a/OkkaKalipWeb.UI/Views/News/Detail.cshtml
+++ b/OkkaKalipWeb.UI/Views/News/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model NewsModel
 @{
-    ViewData["Title"] = Model.News.Title;
+    ViewData["Title"] = Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,11 +10,11 @@
             <div class="breadc-box no-line">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="page-title">@Model.News.Title </h2>
+                        <h2 class="page-title">@Model.Title </h2>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="shop.html">Shop</a></li>
-                            <li class="active">@Model.News.Title </li>
+                            <li class="active">@Model.Title </li>
                         </ul>
                     </div>
                 </div>
@@ -25,22 +25,30 @@
     <div class="entry-content">
         <div class="container">
             <div class="row">
-
-                <div id="primary" class="content-area col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-md-2"></div>
+                <div id="primary" class="content-area col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <main id="main" class="site-main">
                         <div class="row">
                             <div class="col-md-8">
-                                <h3>@Model.News.Title</h3> - <span class="text-primary">@Model.News.DateTime.ToLongDateString()</span>
+                                <h3>@Model.Title</h3> - <span class="text-primary">@Model.DateTime.ToLongDateString()</span>
                             </div>
                             <div class="col-md-4">
-                                <h5 class="float-right">Yazar: <span class="text-primary">@Model.News.Author</span></h5>
+                                <h5 class="float-right">Yazar: <span class="text-primary">@Model.Author</span></h5>
                             </div>
                         </div>
                         <div class="industris-space-50"></div>
-                        <div class="row">@Model.News.Description</div>
+
+                        <div class="row">
+                            <img src="~/img/news/@Model.ImageUrl" alt="@Model.Title" />
+                        </div>
+
+                        <div class="industris-space-50"></div>
+
+                        <div class="row">@(Html.Raw(Model.Description))</div>
                     </main>
                     <!-- #main -->
                 </div>
+                <div class="col-md-2"></div>
             </div>
         </div>
     </div>
