--- a/OkkaKalipWeb.UI/Views/Product/ProductList.cshtml
+++ b/OkkaKalipWeb.UI/Views/Product/ProductList.cshtml
@@ -35,7 +35,7 @@
                         <tr>
                             <td>@item.Id</td>
                             <td>
-                                <img src="~/img/@item.ImageUrl" width="100" />
+                                <img src="~/img/product/@item.ImageUrl" width="100" />
                             </td>
                             <td>@item.Name</td>
                             <td>@item.Price</td>
