--- a/OkkaKalipWeb.UI/Views/Shared/Components/_ourStory.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_ourStory.cshtml
@@ -1,29 +1,26 @@
-﻿<section class="bg-primary no-padding">
+﻿@model AboutModel
+<section class="bg-primary no-padding">
     <div class="">
         <div class="flex-row">
-            <div class="video-section-left" style="background-image:url('https://via.placeholder.com/846x742.png');">
+            <div class="video-section-left" style="background-image:url('@Url.Content("~/img/about/"+Model.YoutubeHomeImageUrl)');">
                 <div class="home-video video-player">
-                    <a class="video-play" href="https://www.youtube.com/watch?v=SyRchIzIq9I"><i class="icon ion-md-play"></i></a>
+                    <a class="video-play" href="@(Model.YoutubeUrl)"><i class="icon ion-md-play"></i></a>
                 </div>
             </div>
             <div class="video-section-right">
                 <div class="block-right">
-                    <h4>OUR STORY</h4>
-                    <h2>Connecting things, <br> It’s all about people.</h2>
-                    <p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream; and, as I lie close to the earth, a thousand unknown plants are noticed... <a class="text-white" href="#"> Read more</a></p>
-                    <img src="images/sign.png" alt="">
+                    <h4>Bizim Hikayemiz</h4>
+                    <h2>@Model.AboutTitle</h2>
+                    <p>@(Model.AboutDescription.ToSubstring(lenght: 200))...<br /><a class="text-white" asp-controller="About" asp-action="Index"> Daha Fazla Oku</a></p>
+
                     <div class="row">
                         <div class="col-md-offset-1 col-md-11 no-padding-sm-left">
                             <div class="about-author">
                                 <div class="about-author-info">
-                                    <h4><strong>Arya Star</strong></h4>
-                                    <p>CEO, Founder</p>
+                                    <h4><strong>@Model.Founder</strong></h4>
+                                    <p>@Model.Rank</p>
                                 </div>
-                                <div class="about-author-media">
-                                    <a href="#"><i class="icon ion-logo-linkedin"></i></a>
-                                    <a href="#"><i class="icon ion-logo-twitter"></i></a>
-                                    <a href="#"><i class="icon ion-logo-skype"></i></a>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -32,7 +29,6 @@
         </div>
     </div>
 </section>
-
 
 <section>
     <div class="container">
@@ -145,67 +141,62 @@
             </div>
         </div>
     </div>
+</section>
 
-    <div class="container">
-        <div class="industris-space"></div>
-        <hr>
-        <div class="industris-space"></div>
-    </div>
-
+<section class="bg-default">
     <div class="container">
         <div class="row flex-row">
-            <div class="col-md-6 align-self-center">
-                <h3>Recruitment</h3>
-                <p>We are looking for smart individuals who want to have a positive impact on the world. If that’s you, visit our Careers page or send us a <br> CV at: <a class="text-second" href="#"> Industris@mail.com </a></p>
-                <div class="industris-space-30"></div>
-                <a href="#" class="btn btn-primary btn-m-r">Join us</a>
-                <a href="#" class="btn btn-border">Our team</a>
-                <div class="industris-space-sm"></div>
-            </div>
-            <div class="col-md-6">
-                <img src="https://via.placeholder.com/1080x721.png" alt="home image">
+            <div class="col-md-8">
+                <h4 class="text-primary">VİZYONUMUZ - MİSYONUMUZ</h4>
+                <h2 class="text-white no-margin-bottom">Firmamızın Vizyon ve Misyonu</h2>
             </div>
         </div>
-    </div>
+        <div class="industris-space-20"></div>
 
-    <div class="container">
-        <div class="industris-space"></div>
-        <hr>
-        <div class="industris-space"></div>
-    </div>
-
-    <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3>Get a quote</h3>
-                <p>As fellow entrepreneurs, we understand the need for space which gives your business room to breathe and grow.</p>
+
+                <div class="project-feature-slider project-feature" data-show="3" data-arrow="true">
+
+                    <div class="project-item col-lg-6 col-sm-6">
+                        <div class="inner">
+                            <img src="~/img/about/vision.jpg" alt="">
+                            <div class="project-info">
+                                <div class="project-meta">VİZYONUMUZ</div>
+                                <div class="project-content">
+                                    <p>@(Model.Vision.ToSubstring())...</p>
+                                    <a asp-controller="About" asp-action="Index">Devamını Gör <i class="icon ion-md-add-circle"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-item col-lg-4 col-sm-6">
+                        <div class="inner">
+                            <img src="~/img/about/mission.jpg" alt="">
+                            <div class="project-info">
+                                <div class="project-meta">MİSYONUMUZ</div>
+                                <div class="project-content">
+                                    <p>@(Model.Mission.ToSubstring())...</p>
+                                    <a asp-controller="About" asp-action="Index">Devamını Gör <i class="icon ion-md-add-circle"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="industris-space-90"></div>
             </div>
         </div>
-        <div class="industris-space-30"></div>
-        <form class="home-form" method="post" action="">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Your name" required>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <input type="email" name="email" class="form-control" id="email" placeholder="Email address" required>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <input type="text" name="phone" class="form-control" id="phone" placeholder="Phone number" required>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <button type="submit" class="wpcf7-form-control wpcf7-submit btn btn-primary btn-full-width">Submit now <i class="icon ion-md-checkmark-circle"></i></button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
 
+        <div class="row">
+            <div class="col-md-3">
+                <h3 class="text-white">Çalışma Sürecimiz</h3>
+            </div>
+            <div class="col-md-9">
+                <p class="text-white border-left">@Model.WorkProcess</p>
+            </div>
+        </div>
+        <div class="industris-space"></div>
+    </div>
 </section>
