--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_footer.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_footer.cshtml
@@ -4,7 +4,7 @@
         <div class="container-custom">
             <div class="row">
 
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-6">
                     <div class="widget-footer">
                         <div id="media_image-1" class="widget widget_media_image">
                             <a href="index.html"><img src="~/img/info/@Model.InfoModel.LogoFooter" alt=""></a>
@@ -18,62 +18,31 @@
                 </div>
                 <!-- end col-lg-3 -->
 
-                <div class="col-md-3 col-sm-6">
+            
+
+
+                <div class="col-md-4 col-sm-6">
                     <div class="widget-footer">
-                        <div id="custom_html-2" class="widget_text widget widget_custom_html padding-left">
-                            <div class="textwidget custom-html-widget">
-                                <ul>
-                                    <li><a href="service-detail.html">Oil & Gas exploited</a></li>
-                                    <li><a href="service-detail.html">Automotive Manufacturing</a></li>
-                                    <li><a href="service-detail.html">Transportation & Distribution</a></li>
-                                    <li><a href="service-detail.html">Manufacture</a></li>
-                                    <li><a href="service-detail.html">Industrial Construction</a></li>
-                                    <li><a href="service-detail.html">Green Energy</a></li>
-                                </ul>
-                            </div>
+                        <div class="footer-social ot-socials bg-white">
+                            <a asp-controller="Home" asp-action="Index">Anasayfa</a>
+                            <a asp-controller="About" asp-action="Index">Kurumsal</a>
+                            <a asp-controller="Shop" asp-action="Index">Ürünler</a>
+                            <a asp-controller="News" asp-action="Index">Haberler</a>
+                            <a asp-controller="Contact" asp-action="Index">İletişim</a>
                         </div>
                     </div>
                 </div>
-                <!-- end col-lg-3 -->
 
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget-footer">
-                        <div id="custom_html-3" class="widget_text widge widget-footer widget_custom_html padding-left">
-                            <div class="textwidget custom-html-widget">
-                                <ul>
-                                    <li><a href="index.html">About us</a></li>
-                                    <li><a href="about.html">Contact us</a></li>
-                                    <li><a href="services.html">The news</a></li>
-                                    <li><a href="services.html">Terms & conditions</a></li>
-                                    <li><a href="blog.html">Case Studies</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- end col-lg-3 -->
 
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-6">
                     <div class="widget-footer">
+
                         <div id="mc4wp_form_widget-1" class="widget widget_mc4wp_form_widget">
-                            <!-- Mailchimp for WordPress v4.5.2 - https://wordpress.org/plugins/mailchimp-for-wp/ -->
-                            <form id="mc4wp-form-1" class="mc4wp-form mc4wp-form-1696" method="post" data-id="1696" data-name="Industris Subscribe">
-                                <div class="input-group">
-                                    <input type="email" name="EMAIL" class="form-control" placeholder="Email Address" required="">
-                                    <span class="input-group-btn">
-                                        <button type="submit" class="btn btn-subcribe"><i class="icon ion-md-checkmark"></i></button>
-                                    </span>
-                                </div>
-                                <input type="hidden" name="_mc4wp_timestamp" value="1560227031">
-                                <input type="hidden" name="_mc4wp_form_id" value="1696">
-                                <input type="hidden" name="_mc4wp_form_element_id" value="mc4wp-form-1">
-                                <div class="mc4wp-response"></div>
-                            </form>
+                            <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">Giriş Yap</a>
                         </div>
-                        <!-- / Mailchimp for WordPress Plugin -->
 
                         <div class="footer-social ot-socials bg-white">
-                            follow us:
+                            sosyal Medyada Bizi Takip Edin:
                             <a target="_blank" href="@(Model.InfoModel.FacebookUrl)" rel="noopener noreferrer"><i class="icon ion-logo-facebook"></i></a>
                             <a target="_blank" href="@(Model.InfoModel.InstagramUrl)" rel="noopener noreferrer"><i class="icon ion-logo-instagram"></i></a>
                             <a target="_blank" href="@(Model.InfoModel.TwitterUrl)" rel="noopener noreferrer"><i class="icon ion-logo-twitter"></i></a>
@@ -96,7 +65,7 @@
                         <li><i class="icon ion-md-call"></i>@Model.InfoModel.Tel1</li>
                         <li><i class="icon ion-md-mail"></i>@Model.InfoModel.Email1</li>
                     </ul>
-                    <a id="back-to-top" href="#" class="btn btn-back-to-top pull-right">Back to top<i class="icon ion-ios-arrow-dropup-circle"></i></a>
+                    <a id="back-to-top" href="#" class="btn btn-back-to-top pull-right">Yukarı Çık<i class="icon ion-ios-arrow-dropup-circle"></i></a>
                 </div>
             </div>
         </div>
