--- a/OkkaKalipWeb.UI/Views/News/Index.cshtml
+++ b/OkkaKalipWeb.UI/Views/News/Index.cshtml
@@ -4,15 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="page-header" style="background: url('https://via.placeholder.com/1920x450.png') no-repeat center center;">
+<div class="page-header" style="background: url('@Url.Content("~/img/banner/"+Model.GetBannerImageUrl()??"main-banner.jpg")') no-repeat center center;">
     <div class="container">
         <div class="breadc-box no-line">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="page-title">News</h2>
+                    <h2 class="page-title">Firmamızdan Haberler</h2>
                     <ul id="breadcrumbs" class="breadcrumbs none-style">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="active">News</li>
+                        <li asp-active-controllers="Home" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent">
+                            <a asp-controller="Home" asp-action="Index">Anasayfa</a>
+                        </li>
+                        <li class="active">Haberler</li>
                     </ul>
                 </div>
             </div>
