--- a/OkkaKalipWeb.UI/Views/News/Detail.cshtml
+++ b/OkkaKalipWeb.UI/Views/News/Detail.cshtml
@@ -5,50 +5,54 @@
 }
 
 
-    <div class="page-header" style="background: url('https://via.placeholder.com/1920x450.png') no-repeat center center;">
-        <div class="container">
-            <div class="breadc-box no-line">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="page-title">@Model.Title </h2>
-                        <ul id="breadcrumbs" class="breadcrumbs none-style">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="shop.html">Shop</a></li>
-                            <li class="active">@Model.Title </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="entry-content">
-        <div class="container">
+<div class="page-header" style="background: url('@Url.Content("~/img/banner/"+Model.GetBannerImageUrl()??"main-banner.jpg")') no-repeat center center;">
+    <div class="container">
+        <div class="breadc-box no-line">
             <div class="row">
-                <div class="col-md-2"></div>
-                <div id="primary" class="content-area col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <main id="main" class="site-main">
-                        <div class="row">
-                            <div class="col-md-8">
-                                <h3>@Model.Title</h3> - <span class="text-primary">@Model.DateTime.ToLongDateString()</span>
-                            </div>
-                            <div class="col-md-4">
-                                <h5 class="float-right">Yazar: <span class="text-primary">@Model.Author</span></h5>
-                            </div>
-                        </div>
-                        <div class="industris-space-50"></div>
-
-                        <div class="row">
-                            <img src="~/img/news/@Model.ImageUrl" alt="@Model.Title" />
-                        </div>
-
-                        <div class="industris-space-50"></div>
-
-                        <div class="row">@(Html.Raw(Model.Description))</div>
-                    </main>
-                    <!-- #main -->
+                <div class="col-md-12">
+                    <h2 class="page-title">@Model.Title</h2>
+                    <ul id="breadcrumbs" class="breadcrumbs none-style">
+                        <li asp-active-controllers="Home" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent">
+                            <a asp-controller="Home" asp-action="Index">Anasayfa</a>
+                        </li>
+                        <li asp-active-controllers="News" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent">
+                            <a asp-controller="News" asp-action="Index">Haberler</a>
+                        </li>
+                        <li class="active">@Model.Title</li>
+                    </ul>
                 </div>
-                <div class="col-md-2"></div>
             </div>
         </div>
     </div>
+</div>
+
+<div class="entry-content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div id="primary" class="content-area col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                <main id="main" class="site-main">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h3>@Model.Title</h3> - <span class="text-primary">@Model.DateTime.ToLongDateString()</span>
+                        </div>
+                        <div class="col-md-4">
+                            <h5 class="float-right">Yazar: <span class="text-primary">@Model.Author</span></h5>
+                        </div>
+                    </div>
+                    <div class="industris-space-50"></div>
+
+                    <div class="row">
+                        <img src="~/img/news/@Model.ImageUrl" alt="@Model.Title" />
+                    </div>
+
+                    <div class="industris-space-50"></div>
+
+                    <div class="row">@(Html.Raw(Model.Description))</div>
+                </main>
+                <!-- #main -->
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+</div>
