--- a/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="product-content">
             <div class="product-price"><span class="sale">@Model.Price </span><span class="price">@Model.Price</span></div>
-            <h3><a href="shop-detail.html">@Model.Name </a></h3>
+            <h3><a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.Id">@Model.Name </a></h3>
         </div>
     </div>
 </div>
